--- a/style.css
+++ b/style.css
@@ -14,4 +14,28 @@
     /* Text (primary): #F8FAFC (near white) */
     --text-primary-color: #F8FAFC;
 }
+header{
+    img{
+        height: 70px;
+        width: 70px;
+    }
+}
 
+/* .container-avantages{
+
+}
+.container-cards{
+
+}
+.card-container{
+
+} 
+.reviews-container{
+
+}
+*/
+
+.eventImages{
+    height: 200px;
+    width: 200px;
+}
