--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 }
 /* Header */
 nav{
-    background: var(--background-color);
+    background: #0f172af0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -48,15 +48,15 @@ nav{
     
 }
 #Contact{
-    color: var(--accent-color);
+    color: var(--text-primary-color);
     background-color: var(--background-color);
     padding: 7px 13px;
-    border: solid 2px var(--accent-color);
+    border: solid 2px var(--text-primary-color);
     border-radius: 5px;
 }
 #Contact:hover{
     color: var(--background-color);
-    background-color: var(--accent-color);
+    background-color: var(--text-primary-color);
     transition: 0.3s ease-in-out;
     border: var(--background-color) 2px solid;
 }
@@ -90,19 +90,9 @@ nav{
         color: var(--accent-color);
         transition: ease-in-out 0.3s;
         border: var(--accent-color) solid 2px;
-        background-color: var(--prymary-ui-color);
+        background-color: #1e293bab;
     }
-    /* a:last-child{
-        color: var(--accent-color);
-        background-color: var(--prymary-ui-color);
-        padding: 7px 13px;
-        border: 2px var(--accent-color) solid;
-        border-radius: 5px;
-    }
-    a:last-child:hover{
-        color: var(--prymary-ui-color);
-        transition: ease-in-out 0.3s;
-        /* background-color: var(--accent-color); */
+   
      
 }
 .banner-title{
@@ -123,22 +113,27 @@ nav{
         gap: 15px;
     }
 }
-
+#avantages{
+    background-color: #fcfaf824;
+}
 .container-cards{
     display: flex;
     justify-content: center;
     gap: 20px;
     padding-bottom: 50px;
     div{
-        height: 150px;
-        width: 350px;
-        border: solid 2px var(--background-color);
+        height: 400px;
+        width: 250px;
         border-radius: 5px;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: start;
         align-items: center;
         text-align: center;
+        gap: 20px;
+        span{
+            font-size: 50px;
+        }
     }
 }
 /* Section Activité */
@@ -166,16 +161,17 @@ nav{
     padding-right: 20px;
     gap: 80px;
     div{
+        box-shadow: 0 0 15px var(--background-color);
+        background-color: #1e2f3b85;
         height: 400px;
         width: 250px;
-        border: solid 2px var(--text-primary-color);
         border-radius: 5px;
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 9px;
         padding: 10px;
-        transition: ease-in-out 0.8s;
+        transition: ease-in-out 0.3s;
         p{
             text-align: center;
         }
@@ -185,7 +181,7 @@ nav{
         border-radius: 5px;
         background-color: var(--text-primary-color);
         color: var(--background-color);
-        transition: ease-in-out 0.8s;
+        transition: ease-in-out 0.3s;
         img{  
             border-radius: 5px;
         }
