--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ nav{
     align-items: center;
     padding: 10px;
     position: fixed;
+    z-index: 100;
     width: -webkit-fill-available;
     top: 0%;
     img{
@@ -111,19 +112,23 @@ nav{
         display: flex;
         flex-direction: column;
         gap: 15px;
+        h2{
+            font-size: 40px;
+        }
     }
 }
 #avantages{
     background-color: #fcfaf824;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 .container-cards{
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 40px;
     padding-bottom: 50px;
     div{
-        height: 400px;
-        width: 250px;
+        width: 300px;
         border-radius: 5px;
         display: flex;
         flex-direction: column;
@@ -153,6 +158,9 @@ nav{
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    h2{
+        font-size: 40px;
+    }
 }
 .card-container{
     display: flex;
@@ -198,7 +206,8 @@ nav{
         height: 450px;
         width: 280px;
         padding: 15px;
-        border: #0F172A solid 2px;
+        background-color: #1e223b14;
+        box-shadow: 0 0 15px #2d2d2d38;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -212,6 +221,11 @@ nav{
         }
         p{
             text-align: center;
+            font-style: italic;
+        }
+        span{
+            color: var(--accent-color);
+            font-weight: bold;
         }
     }
 }
@@ -223,15 +237,49 @@ nav{
 }
 
 footer{
+    padding-top: 50px;
+    padding-bottom: 30px;
+    color: #F8FAFC;
+    background-color: var(--background-color);
     div:first-child{
+        margin-right: 20px;
         display: flex;
         justify-content: space-between;
         ul{
+            a{
+                color: #F8FAFC;
+            }
+            gap: 5px;
             list-style: none;
         }
     }
     img{
         height: 70px;
         width: 70px;
+    }
+    div:last-child{
+        margin-top: 20px;
+        display: flex;
+        align-items: end;
+        justify-content: space-between;
+    }
+    strong{
+        margin-left: 350px;
+        font-size: 80px;
+    }
+    .cc{
+        display: flex;
+        /* justify-content: center; */
+        list-style: none;
+        text-decoration: underline;
+        gap: 30px;
+        margin-right: 10px;
+    }
+}
+#witness{
+    padding-top: 50px;
+    h2{
+        font-size: 40px;
+        text-align: center;
     }
 }
