--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
     font-style: normal;
     text-decoration: none;
 }
+html{
+    scroll-behavior: smooth;
+}
 /* Color Variables */
 :root{
     /* Background: #0F172A (deep navy)*/
@@ -62,7 +65,7 @@ nav{
     border: var(--background-color) 2px solid;
 }
 #backgroundImage{
-    background-image: url("https://png.pngtree.com/thumb_back/fh260/background/20251023/pngtree-an-eerie-escape-room-challenge-with-a-ticking-digital-clock-and-image_19963421.webp");
+    background-image: url("Assets/ChatGPT Image 19 déc. 2025, 19_58_06.png");
     background-size: cover;
     height: 100vh;
     color: var(--text-primary-color);  
@@ -91,7 +94,7 @@ nav{
         color: var(--accent-color);
         transition: ease-in-out 0.3s;
         border: var(--accent-color) solid 2px;
-        background-color: #1e293bab;
+        background-color: #1e293b7d;
     }
    
      
@@ -263,10 +266,6 @@ footer{
         align-items: end;
         justify-content: space-between;
     }
-    strong{
-        margin-left: 350px;
-        font-size: 80px;
-    }
     .cc{
         display: flex;
         /* justify-content: center; */
@@ -275,6 +274,11 @@ footer{
         gap: 30px;
         margin-right: 10px;
     }
+}
+#companyName{
+    display: flex;
+    justify-content: center;
+    font-size: 80px;
 }
 #witness{
     padding-top: 50px;
